# gstreamer-tutorials

./: .gitignore  README.md  build.sh
basics-1/: CMakeLists.txt  build.sh
basics-1/c/: basic-tutorial-1.c
basics-1/src/: Main.cpp
basics-2/: CMakeLists.txt
basics-2/c/: basic-tutorial-2.c
basics-2/src/: Main.cpp
basics-3/: CMakeLists.txt
basics-3/src/: Main.cpp
basics-4/: CMakeLists.txt
basics-4/src/: Main.cpp
basics-5/: CMakeLists.txt
basics-5/c/: basic-tutorial-5.c
basics-5/src/: Main.cpp
